<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sync Notes</string>
     <string name="app_label_settings">Sync Notes Settings</string>
     
    <string name="add_new">Create New Note</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="quit">Quit</string>
    <string name="saved">Saved</string>
    <string name="note_discarded">Note Discarded</string>
    
    <string name="no_search_results">No search results found</string>
    <string name="no_labels_results">No notes found for this label. \n Press back to view all notes</string>
    
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_msg">Are you sure you want to delete?</string>
    
    <string name="version">Version : 0.1 </string>
 	<string name="author">Developer : Manthena Murali \n manthena.android@gmail.com</string>
 	
 	<string name="send_to">Send to..</string>
 	<string name="next">Next</string>
 	
 	<string name="no_sdcard">No SDCard found to backup notes.</string>
 	<string name="backup_title">Please wait.. backing up notes</string>
 	
 	<string name="menu_edit_note">Edit Note</string>
 	<string name="menu_title">Set Title</string>
 	
    <string name="select_font">Select Font</string>
    <string name="select_text_size">Select Text Size</string>
    <string name="select_theme">Select Theme</string>
    
 	<string name="no_network">Please check your internet connection and try again</string>
 	<string name="saved_to_sdcard">File(s) are saved to your SDCard at </string>
 	
 	<string name="cloud_upload_started">Uploading file(s)...</string>
 	<string name="cloud_upload_finish_dropbox">Files Successfully uploaded to your Dropbox account</string>
 	<string name="cloud_upload_finish_googledrive">Files Successfully uploaded to your Google Drive account</string>
 	<string name="cloud_upload_failed">Upload failed. Please try again</string>
 	
    <string name="pref_themes_title">Themes</string>
    <string name="pref_themes_summary">Set the notepad theme</string>
    <string name="pref_font_title">Font</string>
    <string name="pref_font_summary">Set the font for the text in the editor</string>
    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_text_size_summary">Set the size for the text in the editor</string>
    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_summary">Select a theme for editor</string>
    <string name="pref_open_title">Note open action</string>
    <string name="pref_open_summary">Select a type how the note should be opened by default </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="tap_icon_to_edit">Double Tap the editor or Tap on the edit icon to edit the note</string>
     
    <string name="save_to_dialog">Save Note</string>
    <string name="save_to_dialog_msg">Enter some text in the subject filed to save the note</string>
    
    <string name="sync_to">Sync to</string>
    <string name="dropbox_title">DropBox</string>
    <string name="googledrive_title">Google Drive</string>
   
    <string name="subtitle_login">Tap to Login</string>
    <string name="subtitle_logout">Tap to Logout</string>
    
    <string name="already_logged">Already Logged-in</string>
    <string name="logout">Logout</string>
    <string name="remove_added_dropbox_account">Do you want to log-out from your Dropbox account?</string>
    <string name="remove_added_googledrive_account">Do you want to log-out from your Google Drive account?</string>
    <string name="add_account_succesful">Account added successfully</string>
    <string name="remove_account_succesful">Account successfully removed</string>
    <string name="add_account_failed">Failed to add account. Please try again later.</string>
    
    <string name="labels_manager">Label Manager</string>
    <string name="lables_title">Labels</string>
    <string name="lables_create_new_title">Create New Label</string>
    <string name="lables_create">Create</string>
    <string name="lables_already_exists">Label %s already exists.</string>
    <string name="lables_delete_title">Delete Label?</string>
    <string name="lables_delete_msg">Are you sure you want to delete this label ?</string>
    <string name="lables_enter_title">Enter a label name : </string>
    <string name="lables_pick_color">Pick a color for label : </string>
    
    <string name="select_cloud_options">Select a cloud storage</string>
    <string name="login_into">Please login into atleast one account. Press OK to select a option.</string>
    
    <string name="info">Info</string>
    
    <string name="welcome_msg">Welcome to Sync Notes</string>
 	<string name="change_log"><b>Change Log :</b>
 	    \n\n <b>v0.1</b> \n\t ● First Release \n\t ● Save notes to DropBox and Google Drive \n\t ● Labels Manager
 	    \n</string>
</resources>