<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit_note"
        android:icon="@drawable/ic_edit"
        android:showAsAction="always"
        android:title="@string/menu_edit_note"/>
    
    <item
        android:id="@+id/menu_title"
        android:title="@string/menu_title"/>
    
    <item
        android:id="@+id/menu_font"
        android:title="@string/pref_font_title"/>
    
    <item
        android:id="@+id/menu_textsize"
        android:title="@string/pref_text_size_title"/>
    
    <item
        android:id="@+id/menu_theme"
        android:title="@string/pref_themes_title"/>
    
    <item
        android:id="@+id/menu_discard"
        android:title="@string/discard"/>
    
</menu>