<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search"
        android:showAsAction="always"
        android:title="@string/search"/>
    
    <item
        android:id="@+id/menu_add_new_note"
        android:icon="@drawable/ic_add"
        android:showAsAction="always"
        android:title="@string/add_new"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_help"
        android:showAsAction="never"
        android:title="@string/help"/>
    <item
        android:id="@+id/menu_feedback"
        android:showAsAction="never"
        android:title="@string/feedback"/>

</menu>